      highlight currently playing artist within compilation albums
    * Removed PlayAudioCD from the scripting interface. It never worked
      anyway, and audio CDs are just treated as a collection and not a
      special case like they were in 1.4.
    * Changed trackInserted and trackRemoved API signals. (BR 194220)

  BUGFIXES:
    * Changing Amarok's settings no longer removes album covers from playlist.
      (BR 202258)
    * Fixed crash on startup if another Amarok instance was still loading.
      (BR 202713)
    * Fixed some album art in a folder not getting picked up if a subfolder
      contained any files. (BR 167158)
    * Fixed broken selection in the "Saved Playlists" category.
    * Fixed wrong Random Album mode behavior when playlists contains only
      one album. (BR 194066)
    * Fixed double playcount increase for last track in queue (BR 188330)
    * Fixed track drag-and-drop problem when special characters are present
      in file path. (BR 193878)
    * Don't crash when trying to load an empty playlist folder. (BR 202643)
    * Make using the mouse wheel over the progress slider correctly navigate
      in the currently playing track. (BR 195913)
    * Correctly strip all formatting from text pasted or dragged to the 
      comment field in the tag edit dialog. (BR 188270)
    * Fix incorrect "current item" after deleting track(s) from the playlist
      causing up and down buttons to not move selection to the expected row.
      (BR 197203)
    * Jamendo service: Fix destination filenames when using "copy to 
      collection". (BR 171839)
    * Jamendo service: Make torrent downloads work again. (BR 198200)
    * Remove the video stream from the context view when removing the video 
      applet during stream playback. (BR 201281)
    * Fixed locales for Amazon cover fetching. (BR 188446)
    * Fix crash on trying to edit a playlist layout with an invalid element
      value in the xml file. (BR 197128)